--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -16,6 +16,7 @@
 @import "./core/form";
 @import "./core/symbol";
 @import "./core/modal";
+@import "./core/accordion";
 
 
 //mixins
@@ -25,13 +26,17 @@
 
 
 //@import "base";
+/*
 @import "layout";
+*/
 
+/*
 @import "article/collaboration_with_facebook";
 @import "article/discussions";
 @import "article/editorials";
 @import "article/segment_source_statements";
 @import "article/social_media";
+*/
 
 @import "homepage/cover_story";
 @import "homepage/homepage_donate_and_subscribe";
