--- a/app/views/promises/_druha_vlada_andreje_babise_intro.html.erb
+++ b/app/views/promises/_druha_vlada_andreje_babise_intro.html.erb
@@ -1,45 +1,60 @@
 <% content_for(:title, "Sliby vlády Andreje Babiše") %>
 <% content_for(:description, "Speciální výstup Demagog.cz k plnění slibů vlády Andreje Babiše") %>
 
-<img class="promises-logo" src="<%= asset_path("vladni-sliby-logo.svg") %>" alt="Logo projektu Vládní sliby">
+<div class="row g-5 mb-5">
+  <div class="col col-12">
+    <div class="d-flex">
+      <span class="py-1 me-2">
+        <svg width="69" height="33" viewBox="0 0 69 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M31.8608 7.85225C28.9194 3.14603 23.6746 0 17.6725 0C8.4592 0 0.994141 7.38523 0.994141 16.5C0.994141 25.6148 8.4592 33 17.6725 33C23.6591 33 28.8934 29.8694 31.84 25.1837L16.1214 16.5718L31.8608 7.85225Z" fill="#111827"/>
+          <path d="M52.3312 0.0253906C44.9699 0.0253906 38.7395 4.75214 36.5347 11.3008L27.0205 16.5716L36.5658 21.8013C38.7965 28.3038 45.0062 32.9946 52.3312 32.9946C61.5341 32.9946 68.9888 25.6145 68.9888 16.5151C68.9888 7.41575 61.5341 0.0253906 52.3312 0.0253906ZM61.2955 20.082H43.4602V11.9269L48.6427 15.6734L52.2637 11.9269L55.9781 15.8018L61.2903 11.9269V20.082H61.2955Z" fill="#111827"/>
+        </svg>
+      </span>
+      <h1 class="display-4 fw-bold">Sliby vlády Andreje Babiše</h1>
+    </div>
+  </div>
+  <div class="col col-12 col-lg-6">
+    <p class="fs-2 fw-bold">Speciální výstup Demagog.cz k plnění slibů vlády Andreje Babiše</p>
+  </div>
+</div>
+<div class="row g-10">
+  <div class="col col-12 col-lg-6">
+    <p class="fs-6 mb-5">
+      S&nbsp;končícím volebním obdobím zpracoval Demagog.cz unikátní analýzu, nakolik menšinová
+      vláda hnutí ANO a&nbsp;ČSSD splnila závazky, které si na začátku volebního období sama vytyčila.
+      Vláda Andreje Babiše schválila své programové prohlášení 27.&nbsp;června&nbsp;2018. Z&nbsp;něj
+      jsme vybrali padesátku slibů napříč tématy a&nbsp;ty jsme po celé volební období průběžně sledovali.
+    </p>
+    <p class="fs-6">
+      Nyní si tak můžete přečíst, jak si druhá Babišova vláda vedla v&nbsp;plnění slibů v&nbsp;oblasti hospodářství,
+      životního prostředí, sociálního státu, vzdělanosti, právního státu a&nbsp;bezpečnosti. U&nbsp;každého slibu jsme
+      na základě dohledávání primárních zdrojů informací zkoumali, zda se jej koalici podařilo naplnit.
+      Pro potřeby tohoto výstupu pracujeme s&nbsp;třemi kategoriemi hodnocení — jde o&nbsp;sliby splněné, částečně
+      splněné nebo porušené (více v <a href="https://demagog.cz/diskuze/overujeme-sliby-vlady-andreje-babise">metodice</a>).
+      Cílem hodnocení není říct, zda vláda byla dobrá, nebo špatná, úspěšná, nebo neúspěšná. To si rozhodne každý
+      volič 8.&nbsp;a&nbsp;9.&nbsp;října u&nbsp;volební urny. Naším cílem bylo nabídnout veřejnosti tvrdá data
+      a&nbsp;poctivou analýzu namísto impulzivních a zkratkovitých hodnocení, která s&nbsp;sebou nese (nejen) předvolební kampaň.
+    </p>
+  </div>
+  <div class="col col-12 col-lg-6">
+    <p class="fs-6 mb-5">
+      Z&nbsp;výsledků analýzy vyplývá, že z&nbsp;celkových 50 slibů vláda splnila 22 slibů, 13 splnila částečně
+      a&nbsp;zbývajících 15 slibů porušila.
+    </p>
 
-<h1>Sliby vlády Andreje Babiše</h1>
-<p><strong>Speciální výstup Demagog.cz k plnění slibů vlády Andreje Babiše</strong></p>
+    <p class="fs-6 mb-5">
+      Druhá polovina funkčního období vlády byla charakterizována probíhající pandemií covidu-19. S&nbsp;ní
+      spojené výzvy se pochopitelně podepsaly i&nbsp;na plnění programového prohlášení. Na naši metodiku
+      hodnocení jednotlivých slibů to vliv nemělo, při čtení naší analýzy ale dopad pandemie na práci vlády mějte na paměti.
+    </p>
 
-<p>
-  S&nbsp;končícím volebním obdobím zpracoval Demagog.cz unikátní analýzu, nakolik menšinová
-  vláda hnutí ANO a&nbsp;ČSSD splnila závazky, které si na začátku volebního období sama vytyčila.
-  Vláda Andreje Babiše schválila své programové prohlášení 27.&nbsp;června&nbsp;2018. Z&nbsp;něj
-  jsme vybrali padesátku slibů napříč tématy a&nbsp;ty jsme po celé volební období průběžně sledovali.
-</p>
+    <p class="fs-6 mb-5">
+      Analýzu jsme zpracovali k&nbsp;17.&nbsp;září&nbsp;2021, s&nbsp;ohledem na případné legislativní posuny
+      u&nbsp;některých slibů ji budeme do sněmovních voleb aktualizovat.
+    </p>
 
-<p>
-  Nyní si tak můžete přečíst, jak si druhá Babišova vláda vedla v&nbsp;plnění slibů v&nbsp;oblasti hospodářství,
-  životního prostředí, sociálního státu, vzdělanosti, právního státu a&nbsp;bezpečnosti. U&nbsp;každého slibu jsme
-  na základě dohledávání primárních zdrojů informací zkoumali, zda se jej koalici podařilo naplnit.
-  Pro potřeby tohoto výstupu pracujeme s&nbsp;třemi kategoriemi hodnocení — jde o&nbsp;sliby splněné, částečně
-  splněné nebo porušené (více v <a href="https://demagog.cz/diskuze/overujeme-sliby-vlady-andreje-babise">metodice</a>).
-  Cílem hodnocení není říct, zda vláda byla dobrá, nebo špatná, úspěšná, nebo neúspěšná. To si rozhodne každý
-  volič 8.&nbsp;a&nbsp;9.&nbsp;října u&nbsp;volební urny. Naším cílem bylo nabídnout veřejnosti tvrdá data
-  a&nbsp;poctivou analýzu namísto impulzivních a zkratkovitých hodnocení, která s&nbsp;sebou nese (nejen) předvolební kampaň.
-</p>
-
-<p>
-  Z&nbsp;výsledků analýzy vyplývá, že z&nbsp;celkových 50 slibů vláda splnila 22 slibů, 13 splnila částečně
-  a&nbsp;zbývajících 15 slibů porušila.
-</p>
-
-<p>
-  Druhá polovina funkčního období vlády byla charakterizována probíhající pandemií covidu-19. S&nbsp;ní
-  spojené výzvy se pochopitelně podepsaly i&nbsp;na plnění programového prohlášení. Na naši metodiku
-  hodnocení jednotlivých slibů to vliv nemělo, při čtení naší analýzy ale dopad pandemie na práci vlády mějte na paměti.
-</p>
-
-<p>
-  Analýzu jsme zpracovali k&nbsp;17.&nbsp;září&nbsp;2021, s&nbsp;ohledem na případné legislativní posuny
-  u&nbsp;některých slibů ji budeme do sněmovních voleb aktualizovat.
-</p>
-
-<p>
-  Za podporu děkujeme Nadačnímu fondu pro nezávislou žurnalistiku.
-</p>
+    <p class="fs-6 mb-5">
+      Za podporu děkujeme Nadačnímu fondu pro nezávislou žurnalistiku.
+    </p>
+  </div>
+</div>
