--- a/app/views/components/_header.html.erb
+++ b/app/views/components/_header.html.erb
@@ -1,22 +1,8 @@
 <%
 
 @nav = [
-  Struct::NavSubmenu.new(
-    "Factcheck",
-    [
-      Struct::NavLink.new('Diskuze', '/diskuze'),
-      Struct::NavLink.new('Sociální sítě', '/socialni-site'),
-      Struct::NavLink.new('Spolupráce s Facebookem', '/spoluprace-s-facebookem')
-    ]
-  ),
-  Struct::NavLink.new("Komentáře", '/komentare'),
-  Struct::NavSubmenu.new(
-    "Přehledy",
-    [
-      Struct::NavLink.new('Politici', '/vypis-recniku'),
-      Struct::NavLink.new('Výroky', '/vyroky')
-    ]
-  ),
+  Struct::NavLink.new('Politici', '/vypis-recniku'),
+  Struct::NavLink.new('Výroky', '/vyroky'),
   Struct::NavSubmenu.new(
     'Sliby',
     [
@@ -25,17 +11,7 @@
       Struct::NavLink.new('Sliby prezidenta Miloše Zemana (2013—2018)', 'https://zpravy.aktualne.cz/domaci/zverejnujeme-velkou-inventuru-zemanovych-slibu-ktere-slovo-d/r~9ebe8728ff6911e7adc2ac1f6b220ee8/')
     ]
   ),
-  Struct::NavSubmenu.new(
-    "O nás",
-    controller.menu_items.map do |menu_item|
-      case menu_item.kind
-      when MenuItem::KIND_PAGE then Struct::NavLink.new(menu_item.title, page_url(slug: menu_item.page.slug))
-      when MenuItem::KIND_DIVIDER then '<hr>'
-      else
-        raise Error("Unknown menu item kind #{menu_item.kind}")
-      end
-    end
-  )
+  Struct::NavLink.new('O nás', '/stranka/o-nas'),
 ]
 
 
@@ -117,7 +93,7 @@
                 <div class="text-white">
                   <%= form_tag search_path, method: :get do %>
                   <div class="d-flex align-items-center mt-5">
-                    <input name="q" type="text" class="input" placeholder="Zadejte hledaný výraz…">
+                    <input name="q" type="text" class="input outline white focus-secondary" placeholder="Zadejte hledaný výraz…">
                     <button type="submit" class="btn bg-white ms-4">
                       <span class="text-dark mx-4">Hledej</span>
                     </button>
