--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -20,6 +20,12 @@
           </span>
         </div>
       </div>
+      <div class="mt-5">
+        <p class="fs-5 mb-4">Upozorněte nás, když narazíte na nepravdivý obsah na sociálních sítích!</p>
+        <a href="#" class="btn bg-secondary w-100">
+          <span class="text-dark">Upozornit</span>
+        </a>
+      </div>
     </div>
     <div class="bg-light text-dark p-8 rounded-l d-none d-lg-flex">
       <div class="w-100">
@@ -64,5 +70,19 @@
       </div>
     </div>
   </div>
+</div>
 
+<div class="bg-light text-dark p-10 rounded-l mt-10">
+  <div class="row g-10 justify-content-between">
+    <div class="col col-12 col-lg-5">
+      <h2 class="display-5 mb-5 fw-bold">Workshopy</h2>
+      <p class="fs-5 mb-5">V rámci 90 minut interaktivních aktivit pomůžeme nejen studentům středních škol v základní orientaci v mediální oblasti, předáme ale také znalost rozšiřovat fakta od názorově zabarvených textů a prohloubíme rovněž kritické myšlení, což je pro dnešní dobu zcela zásadní dovednost.</p>
+      <a href="/stranka/workshopy-demagogcz" class="btn bg-primary">
+        <span>CTA Workshopy</span>
+      </a>
+    </div>
+    <div class="col col-12 col-lg-5">
+      <img class="w-100 rounded-m" src="<%= asset_path("workshop_default.jpg") %>" alt="Workshopy">
+    </div>
+  </div>
 </div>
