--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -2,6 +2,17 @@
 
 <div class="row g-10 flex-lg-row-reverse" data-controller="components--modal">
   <div class="col col-12 col-lg-4">
+    <div class="d-flex align-items-center mb-10">
+      <span class="fs-7 fw-bold text-uppercase me-5">Nejvyhledávanější</span>
+      <div class="symbol-group">
+        <% for speaker in @most_searched_speakers %>
+          <span class="symbol symbol-45px rounded-circle bg-gray-500 overflow-hidden">
+            <%= render(PortraitComponent.new(speaker: speaker)) %>
+          </span>
+
+        <% end %>
+      </div>
+    </div>
     <div class="bg-dark text-white p-8 rounded-l mb-10">
       <div class="">
         <h2 class="mb-4">Co je Demagog.cz?</h2>
@@ -50,9 +61,29 @@
     </div>
   </div>
   <div class="col col-12 col-lg-8">
-    <% @articles.each do |article| %>
+    <div class="d-flex align-items-center mb-10">
+      <a href="#" class="btn outline my-2 me-2">
+        <span>Volby 2022</span>
+      </a>
+      <a href="#" class="btn outline my-2 me-2">
+        <span>Ukrajinský konflikt</span>
+      </a>
+      <a href="#" class="btn outline my-2">
+        <span>Factchech pro facebook</span>
+      </a>
+    </div>
+    <% @top_articles.each do |article| %>
       <%= render partial: "components/article_main", object: article, as: :article, locals: { show_portraits: false, smaller_gaps: true } %>
     <% end %>
+  </div>
+  <div class="col col-12">
+    <div class="row g-10 mt-10">
+      <% @bottom_articles.each do |article| %>
+        <div class="col col-12 col-lg-6">
+          <%= render partial: "components/article_main", object: article, as: :article, locals: { show_portraits: false, smaller_gaps: true } %>
+      </div>
+      <% end %>
+    </div>
   </div>
   <div class="modal" id="intro-video-modal" aria-hidden="true" data-target="components--modal.introVideoModal">
     <div class="modal-overlay" tabindex="-1" data-micromodal-close>
